--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "dateformat": "^3.0.3",
     "font-awesome": "^4.7.0",
+    "js-file-download": "^0.4.5",
+    "json2xls": "^0.1.2",
     "lodash": "^4.17.11",
     "react": "^16.2.0",
+    "react-datepicker": "^2.3.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "1.0.17"
