--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
+    "json2xls": "^0.1.2",
     "mysql2": "^1.6.5",
     "react-script": "^2.0.5"
   }
